# dycore_stencils

./: CMakeLists.txt  Definitions.hpp  LICENSE.md  domain.hpp  repository.hpp  utils.hpp  verifier.hpp
horizontal_diffusion/: defs.hpp  horizontal_diffusion.cu  horizontal_diffusion.h  horizontal_diffusion_benchmark.cu
vertical_advection/: CMakeLists.txt  defs.hpp  functions.hpp  vertical_advection.cu  vertical_advection_benchmark.cu
